# barcode_verification

./: .gitignore  01_add_logging_system.patch  04_fix_performance_cached_counts.patch  06-10_remaining_fixes.patch  AGENT.md  QUICK_REFERENCE.md  README.md  app.py  barcode-verifier.service  barcode_verification.db-wal  barcode_verification_fixes.patch  database.py  kiosk.bat  kiosk.py  main.py  migrate_add_is_locked.py  models.py  pyproject.toml  requirements.txt  run.bat  schemas.py  services.py  setup.sh  tree.txt
archive/esp32_firmware/: app_logic.py  boot.py  main.py
docs/: DEPLOYMENT.md  ENGINEERING_HANDOVER.md  FAQ.md  IT_OPERATIONS.md  NETWORK_CONFIG.md  OPERATOR_GUIDE.md  WINDOWS_SETUP.md  hardware.md
instance/: barcode_verification.db
standalone_app/: index.html  style.css
templates/: history.html  index.html  monitor.html
tests/: conftest.py  test_api.py  test_patches.py
windows_BV/: .gitignore  02_fix_race_condition.patch  03_add_pin_rate_limiting.patch  05_add_input_validation.patch  PATCHES_SUMMARY.md  QUICK_REFERENCE.md  README.md  barcode_verification.db-shm  barcode_verification.db-wal  kiosk.bat  main.py  migrate_add_cached_counts.py  models.py  pyproject.toml  run.bat  verify_db.py
windows_BV/archive/esp32_firmware/: server.py
windows_BV/archive/standalone_app/: index.html
windows_BV/docs/: DEPLOYMENT.md  ENGINEERING_HANDOVER.md  WINDOWS_SETUP.md  hardware.md
windows_BV/static/css/: style.css
windows_BV/static/js/: app.js
windows_BV/templates/: history.html  index.html
windows_BV/tests/: conftest.py  test_api.py  test_patches.py
(+6 files in other folders)
